[package]
name = "tt"
version = "0.1.0"
authors = ["hardliner66 <hardliner66@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
dirs = "3.0.1"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.21"
