[package]
name = "timetracking"
description = "Simple time tracker with simple data format"
version = "1.5.20-alpha.0"
authors = ["hardliner66 <hardliner66@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/hardliner66/timetracking"

[[bin]]
name = "tt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.40"
bincode = { version = "1.3.3", optional = true }
chrono = { version = "0.4.19", features = ["serde"] }
config = { version = "0.11.0", default-features = false, features = ["toml"] }
iif = "1.2.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
shellexpand = "2.1.0"
structopt = "0.3.21"

[features]
default = ["binary"]
binary = ["bincode"]
